<resources>
    <string name="app_name">Chuck Norris</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="search_here">Search Here</string>
    <string name="search">Search</string>
    <string name="random_joke">Random Joke</string>
    <string name="share">Share</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_result">No Result</string>

    <string name="cn_logo_link">https://api.chucknorris.io/img/chucknorris_logo_coloured_small@2x.png</string>

    <!-- Content Description -->
    <string name="cn_logo">Chuck Norris logo</string>
    <string name="loading_indicator">Loading indicator</string>
    <string name="share_button">Share Button</string>
</resources>