<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <ImageView
        android:id="@+id/ivLogo"
        style="@style/LogoImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cn_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSearch"
        style="@style/HomeTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_36dp"
        android:layout_marginTop="@dimen/space_28dp"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo">

        <net.muazkadan.uicomponent.CNEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_here"
            android:inputType="textAutoComplete" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSearch"
        style="@style/HomeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_marginEnd="@dimen/space_8dp"
        android:text="@string/search"
        app:layout_constraintEnd_toStartOf="@id/btnRandomJoke"
        app:layout_constraintStart_toStartOf="@id/tilSearch"
        app:layout_constraintTop_toBottomOf="@+id/tilSearch"
        tools:layout_editor_absoluteX="323dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRandomJoke"
        style="@style/HomeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_8dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:text="@string/random_joke"
        app:layout_constraintEnd_toEndOf="@id/tilSearch"
        app:layout_constraintStart_toEndOf="@id/btnSearch"
        app:layout_constraintTop_toBottomOf="@+id/tilSearch"
        tools:layout_editor_absoluteX="323dp" />

</androidx.constraintlayout.widget.ConstraintLayout>