<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog">

    <View
        android:id="@+id/viewHeader"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_dialog_header"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/random_joke"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/viewHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewHeader" />

    <TextView
        android:id="@+id/tvJoke"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_14dp"
        android:layout_marginTop="@dimen/space_14dp"
        android:layout_marginEnd="@dimen/space_14dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewHeader"
        tools:text="Every attractive woman on Earth either gave her virginity, or will give her virginity, to Chuck Norris." />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDismiss"
        style="@style/HomeOutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_14dp"
        android:layout_marginTop="@dimen/space_12dp"
        android:layout_marginEnd="@dimen/space_8dp"
        android:layout_marginBottom="@dimen/space_12dp"
        android:text="@string/dismiss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnShare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJoke" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShare"
        style="@style/HomeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_8dp"
        android:layout_marginTop="@dimen/space_12dp"
        android:layout_marginEnd="@dimen/space_14dp"
        android:layout_marginBottom="@dimen/space_12dp"
        android:text="@string/share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDismiss"
        app:layout_constraintTop_toBottomOf="@+id/tvJoke" />

</androidx.constraintlayout.widget.ConstraintLayout>